Confirm uploaded file in progress
