# BackEnd/ChamberAppel/ChamberAppel.Api/Controllers/DisciplineBudgetairesImportController.cs
@@ -1,6 +1,8 @@
-﻿using ChamberAppel.Domain.DTOs;
+﻿using ChamberAppel.Application.Messages;
+using ChamberAppel.Domain.DTOs;
 using ChamberAppel.Domain.Models;
 using ChamberAppel.Domain.Services;
+using Helpers.Api;
 using Microsoft.AspNetCore.Mvc;
 using System.Net;
 
@@ -20,20 +22,20 @@ namespace ChamberAppel.Api.Controllers
         public async Task<ApiResponse<bool>> Importe(DtoUploadFile request)
         {
             var res = await _service.Upload(request.file, request.UpdatedBy);
-            return new ApiResponse<bool> { Data = res, StatusCode = HttpStatusCode.OK };
+
+            if (res == true)
+                return new ApiResponse<bool> { StatusCode = HttpStatusCode.OK };
+            else
+                return new ApiResponse<bool> { StatusCode = HttpStatusCode.BadRequest };
         }
 
         [HttpPost("GetAllValideData")]
         public async Task<DatatableResponse<DisciplineBudgetaireTemp>> GetAllValideData(DtoPagination pagination)
-        {
-            return await _service.GetAllValideData(pagination);
-        }
+            => await _service.GetAllValideData(pagination);
 
         [HttpPost("GetAllErrorsData")]
         public async Task<DatatableResponse<DisciplineBudgetaireTemp>> GetAllErrorsData(DtoPagination pagination)
-        {
-            return await _service.GetAllErrorsData(pagination);
-        }
+            => await _service.GetAllErrorsData(pagination);
 
         [HttpPost("Analyse")]
         public async Task<ApiResponse<bool>> Analyse()
@@ -43,10 +45,17 @@ namespace ChamberAppel.Api.Controllers
         }
 
         [HttpPost("Fusionner")]
-        public async Task<ApiResponse<bool>> Fusionner(string updatedBy)
+        public async Task<ApiResponse<bool>> Fusionner()
         {
-            var res = await _service.Fusionner(updatedBy);
+            var res = await _service.Fusionner();
             return new ApiResponse<bool> { Data = res, StatusCode = HttpStatusCode.OK };
+        }
+
+        [HttpPost("Exporter")]
+        public async Task<IActionResult> Exporter()
+        {
+            var res = await _service.GetAllErrorsData(null);
+            return this.DownloadAsExcelFile(res.Data, Const.List_Discipline_Budgeitaires_With_Errors);
         }
     }
 }
